--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button btn">Order Service</button>
+          <button type="button" class="hero-button btn" data-modal-open>Order Service</button>
         </div>
       </section>
       <!-- переваги студії секція 2-->
@@ -477,6 +477,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
