--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,11 @@
         <nav class="header-navigation">
           <a href="./index.html" class="logo link">Web<span class="logo-color">Studio</span> </a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="site-link link">Studio</a></li>
-            <li><a href="./portfolio.html" class="site-link link">Portfolio</a></li>
-            <li><a href="" class="site-link link">Contacts</a></li>
+            <li class="site-list"><a href="./index.html" class="site-link link">Studio</a></li>
+            <li class="site-list current-page">
+              <a href="./portfolio.html" class="site-link link">Portfolio</a>
+            </li>
+            <li class="site-list"><a href="" class="site-link link">Contacts</a></li>
           </ul>
         </nav>
 
@@ -58,12 +60,18 @@
           <ul class="portfolio-section-list list">
             <li class="portfolio-list">
               <a href="" class="link portfolio-link"
-                ><img
-                  src="./images/bankapp.jpg"
-                  alt="BankApp screenshout"
-                  width="360"
-                  height="300"
-                />
+                ><div class="portfolio-list-wrapper">
+                  <img
+                    src="./images/bankapp.jpg"
+                    alt="BankApp screenshout"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Banking App Interface Concept</h2>
                   <p class="section-text">App</p>
@@ -72,7 +80,14 @@
             </li>
             <li class="portfolio-list">
               <a href="" class="link portfolio-link">
-                <img src="./images/paypass.jpg" alt="Paypass phone" width="360" height="300" />
+                <div class="portfolio-list-wrapper">
+                  <img src="./images/paypass.jpg" alt="Paypass phone" width="360" height="300" />
+
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Cashless Payment</h2>
                   <p class="section-text">Marketing</p>
@@ -81,7 +96,18 @@
             </li>
             <li class="portfolio-list">
               <a href="" class="link portfolio-link">
-                <img src="./images/medapp.jpg" alt="Notebook with phone" width="360" height="300" />
+                <div class="portfolio-list-wrapper">
+                  <img
+                    src="./images/medapp.jpg"
+                    alt="Notebook with phone"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Meditation App</h2>
                   <p class="section-text">App</p>
@@ -90,7 +116,13 @@
             </li>
             <li class="portfolio-list">
               <a href="" class="link portfolio-link">
-                <img src="./images/car.jpg" alt="Car" width="360" height="300" />
+                <div class="portfolio-list-wrapper">
+                  <img src="./images/car.jpg" alt="Car" width="360" height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Taxi Service</h2>
                   <p class="section-text">Marketing</p>
@@ -99,7 +131,13 @@
             </li>
             <li class="portfolio-list">
               <a href="" class="link portfolio-link">
-                <img src="./images/phone.jpg" alt="Mobile phone" width="360" height="300" />
+                <div class="portfolio-list-wrapper">
+                  <img src="./images/phone.jpg" alt="Mobile phone" width="360" height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Screen Illustrations</h2>
                   <p class="section-text">Design</p>
@@ -108,7 +146,13 @@
             </li>
             <li class="portfolio-list">
               <a href="" class="link portfolio-link">
-                <img src="./images/orangegirl.jpg" alt="Orange girl" width="360" height="300" />
+                <div class="portfolio-list-wrapper">
+                  <img src="./images/orangegirl.jpg" alt="Orange girl" width="360" height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Online Courses</h2>
                   <p class="section-text">Marketing</p>
@@ -117,12 +161,18 @@
             </li>
             <li class="portfolio-list">
               <a href="" class="link portfolio-link">
-                <img
-                  src="./images/insta.jpg"
-                  alt="Instagram screenshout"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-wrapper">
+                  <img
+                    src="./images/insta.jpg"
+                    alt="Instagram screenshout"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Instagram Stories Concept</h2>
                   <p class="section-text">Design</p>
@@ -131,7 +181,13 @@
             </li>
             <li class="portfolio-list">
               <a href="" class="link portfolio-link">
-                <img src="./images/food.jpg" alt="Food" width="360" height="300" />
+                <div class="portfolio-list-wrapper">
+                  <img src="./images/food.jpg" alt="Food" width="360" height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Organic Food</h2>
                   <p class="section-text">Web Site</p>
@@ -140,7 +196,13 @@
             </li>
             <li class="portfolio-list">
               <a href="" class="link portfolio-link">
-                <img src="./images/coffe.jpg" alt="Cup of coffee" width="360" height="300" />
+                <div class="portfolio-list-wrapper">
+                  <img src="./images/coffe.jpg" alt="Cup of coffee" width="360" height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="name-works">
                   <h2 class="section-item">Fresh Coffee</h2>
                   <p class="section-text">Web Site</p>
