--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
         <nav class="header-navigation">
           <a href="./index.html" class="logo link">Web<span class="logo-color">Studio</span> </a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="site-link link">Studio</a></li>
-            <li><a href="./portfolio.html" class="site-link link">Portfolio</a></li>
-            <li><a href="" class="site-link link">Contacts</a></li>
+            <li class="site-item">
+              <a href="./index.html" class="site-link current link">Studio</a>
+            </li>
+            <li class="site-item">
+              <a href="./portfolio.html" class="site-link link">Portfolio</a>
+            </li>
+            <li class="site-item"><a href="" class="site-link link">Contacts</a></li>
           </ul>
         </nav>
 
