--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           <ul class="site-nav list">
             <li class="site-list"><a href="./index.html" class="site-link link">Studio</a></li>
             <li class="site-list current-page">
-              <a href="./portfolio.html" class="site-link link">Portfolio</a>
+              <a href="./portfolio.html" class="site-link current link">Portfolio</a>
             </li>
             <li class="site-list"><a href="" class="site-link link">Contacts</a></li>
           </ul>
