--- a/index.html
+++ b/index.html
@@ -488,6 +488,12 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-titel">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <input type="text" class="modal-input" />
+          <input type="text" class="modal-input" />
+          <input type="text" class="modal-input" />
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
